--- a/Weather App/Weather App/style.css
+++ b/Weather App/Weather App/style.css
@@ -1,7 +1,29 @@
 
-/* *{
-    background-color: #ffcc00; */
-/* } */
+*{
+    margin: 0px;
+    padding: 0px;
+    
+}
+html{
+    font-family: 'Merriweather', serif;
+    background-color:#33637d;
+    font-weight: normal;
+
+ 
+}
+
+.top-title{
+    text-align:center;
+    font-size: 32px;
+    color: #1f2833;
+   
+}
+.welcome{
+text-decoration: #c5c6c7 underline;
+
+      
+      
+}
 .container{
  
     margin: 20px;
@@ -10,40 +32,173 @@
 input{
 
     margin: 0 auto;
-  width: 15%;
-  height: 45px;
+  width: 10%;
+  height: 70px;
   padding: 0 20px;
   font-size: 1rem;
   border: 1px solid black;
   outline: none;
  border-radius: 15px;
+ background-color: #c5c6c7;
+ transition: 0.5s ease;
 
   
 }
 input:focus{
-    border: 1px solid #ffcc00;
-    transition: 0.35s ease;
-    color: #4D4933; 
-    background-color: #e1dfd2;
+
+    border: 3px solid black;
+    background-color:#33637d;
+    box-shadow:0 3px 14px rgb(0 0 0 / 40%);
+    width: 20%;
+    font-size: x-large;
+    font-weight: bolder;
 }
-.row{
-    display: flex;
-    justify-content: center;
-}
-.col{
-    border: 5px solid black;
-    border-radius: 15px;
-    width: 25%;
-    min-width: 400px;
-    box-shadow:wheat 20px;
+button{
+    
+    width:70px;
+    height:70px;
+    border: 2px solid #759bb0;
+    border-radius: 50%;
+    color:#c5c6c7;
+    text-align:center;
+    text-decoration:none;
+    background: #0b0c10;
+    box-shadow: 0 0 10px black;
+    font-size:20px;
+    margin:  20px;
+
+  
 }
 
-#map {
-    padding-left: 500px;
-    display: block;
-    height: 500px;
-    width: 60%;
-    justify-content: center;
-    margin-bottom: 400px;
-}
   
+
+.fas{
+    color: #f9d71c;
+}
+.col{
+    
+    border-radius: 15px;
+    width: 80%;
+    min-width: 400px;
+    padding: 0 10%;
+    font-size: 16px;
+    color:#c5c6c7;
+   
+}
+
+.title{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: solid 15px;
+    border-radius: 25%;
+}
+.current-time{
+    
+    font: 15px bold;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+}
+#location{
+    font: 100px bolder;
+    margin-top: 0px;
+    padding-top: 0px;
+    line-height: 80px;
+}
+.img_container{
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 0px;
+ 
+}
+.temp{
+    display: block;
+    font-size: 50px;
+    transition: 1s ease-in-out;
+}
+.temp:hover{
+   
+    
+    font-size: 100px;
+    font-weight: bolder;
+    transform: rotate(360deg) ;
+}
+
+.temp_cont{
+    padding-left: 0px;
+    margin-left: 0px;
+}
+.current_temp{
+    
+    margin: 10px;
+}
+.description_container{
+    display: flex;
+    justify-content: center;
+    font-size: 48px;
+    font-weight: 100;
+  padding: 10px;
+  margin: 30px;
+
+}
+
+ul{ 
+    margin-top: 20px;
+    list-style: none;
+    column-count: 3;
+    border-bottom: solid 15px;
+    padding-bottom: 20px;
+    border-radius: 25%;
+   
+}
+li{
+   
+    font-size: 28px ;
+    margin: 5px;
+    padding: 10px;
+    line-height: 35px;
+  
+
+}
+
+
+
+
+
+#windy {
+
+    display: inline-block;
+    width: 80%;
+    height: 55rem;
+    border: 3px black solid;
+    margin: 20px;
+    border-radius: 2%;
+}
+.map-container{
+    align-items: center;
+    background-color: burlywood;
+}
+
+
+#windy #logo-wrapper {
+    top: initial;
+    bottom: 65px;
+}
+
+#windy #logo-wrapper #logo {
+    left: 80px;
+}
+/* #windy .leaflet-popup-content-wrapper{
+    background:black !important;
+    margin: 5px;
+
+}
+/* #windy .leaflet-popup-content{
+
+
+} */
+
+/* #windy .leaflet-popup-tip:invalid{
+    background: yellow ;
+} */ 
